src/objects/PYME001_Cuentas_Bancaria__c.object
<CustomObject>
    <description>Nuevo objeto para PYME Cuentas Bancarias.</description>
    <fields>
        <fullName>MX_PYME_Reporte__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporte PyME</label>
        <referenceTo>MX_PyME_Reporte__c</referenceTo>
        <relationshipLabel>Cuentas Bancarias</relationshipLabel>
        <relationshipName>Cuentas_Bancarias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PYME_br_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nombre del Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cuentas Bancarias</relationshipLabel>
        <relationshipName>Cuentas_Bancarias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PYME_dv_Monto__c</fullName>
        <description>Nuevo campo Pyme Monto.</description>
        <label>Monto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PYME_ls_Nombre_del_banco__c</fullName>
        <description>Campo nuevo para pyme Banco</description>
        <label>Nombre del banco</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actinver</fullName>
                    <default>true</default>
                    <label>Actinver</label>
                </value>
                <value>
                    <fullName>Banamex</fullName>
                </value>
                <value>
                    <fullName>Banca Afirme</fullName>
                </value>
                <value>
                    <fullName>Banca Mifel</fullName>
                </value>
                <value>
                    <fullName>Banco Azteca</fullName>
                </value>
                <value>
                    <fullName>Banco del Bajio</fullName>
                </value>
                <value>
                    <fullName>Banorte / IXE</fullName>
                </value>
                <value>
                    <fullName>BanRegio</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>CI Banco</fullName>
                </value>
                <value>
                    <fullName>HSBC</fullName>
                </value>
                <value>
                    <fullName>INBURSA</fullName>
                </value>
                <value>
                    <fullName>Intercam</fullName>
                </value>
                <value>
                    <fullName>Monex</fullName>
                </value>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Santander</fullName>
                </value>
                <value>
                    <fullName>Scotiabank</fullName>
                </value>
                <value>
                    <fullName>Sin Competencia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_ls_Producto_Financieros__c</fullName>
        <description>Nuevo campo pyme Producto Financieros</description>
        <label>Producto Financieros</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amortizable</fullName>
                    <default>true</default>
                    <label>Amortizable</label>
                </value>
                <value>
                    <fullName>Revolverte</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_ls_Tipo_Garantia__c</fullName>
        <description>Nuevo campo pyme Tipo de garantia.</description>
        <label>Tipo de Garantía</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grantía GL</fullName>
                    <default>true</default>
                    <label>Grantía GL</label>
                </value>
                <value>
                    <fullName>Hipotecaria</fullName>
                </value>
                <value>
                    <fullName>Obligado Solidario</fullName>
                </value>
                <value>
                    <fullName>Prendaria</fullName>
                </value>
                <value>
                    <fullName>Sin Garantía</fullName>
                </value>
                <value>
                    <fullName>Stand By</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PYME_pr_Tasa__c</fullName>
        <description>Campo nuevo pyme Tasa</description>
        <label>Tasa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PYME_un_Plazo__c</fullName>
        <description>Nuevo campo pyme Plazo</description>
        <label>Plazo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cuenta Bancaria</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PYME_ls_Nombre_del_banco__c</columns>
        <columns>PYME_ls_Producto_Financieros__c</columns>
        <columns>PYME_dv_Monto__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>Cuentas_Bancarias_PyME</fullName>
        <columns>NAME</columns>
        <columns>PYME_ls_Nombre_del_banco__c</columns>
        <columns>PYME_ls_Producto_Financieros__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Cuentas Bancarias PyME</label>
    </listViews>
    <nameField>
        <displayFormat>RB-{0000}</displayFormat>
        <label>Relacion Bancaria</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cuentas Bancarias</pluralLabel>
    <recordTypes>
        <fullName>PYME_tre_Cuenta_Bancaria</fullName>
        <active>true</active>
        <label>Cuenta Bancaria PyME</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>